@@ -1,3 +1,10 @@
+2006-02-24  Aaron Stone  <aaron@serendipity.cx>
+
+	* sort.h, sortmodule.h, sortmodule.c, modules/sortsieve.c,
+	timsieved.c, timsieve.c:
+	Added a proper listextensions function and the existing
+	CAPABILITY command of managesieve now uses it.
+
 2006-02-20  Aaron Stone  <aaron@serendipity.cx>
 
 	* acinclude.m4, configure.in:
